--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
+    "dev": "concurrently \"react-scripts start\" \"yarn run server\"",
+    "server": "json-server --watch db.json --port 8080",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
